// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getHoverEffectsBackgroundStyles Get a correct Hover Effects 1`] = `
Object {
  "general": Object {
    "background-color": "red",
  },
}
`;

exports[`getHoverEffectsBackgroundStyles Get a correct Hover Effects 2`] = `
Object {
  "general": Object {
    "background": "red",
  },
}
`;
